build 21 - jan/12/2022
 - python 3.10.1 adjustments
 - pyinstaller 4.8
 - replaced sanic for flask (2.0.2)
 - werkzeug 2.0.2
 - click 8.0.3
 - itsdangerous 2.0.1
 - jinja 3.0.3
 - markupsafe 2.0.1
 - removed websockets, pycryptodome

build 20 - dec/22/2021
 - Apple M1 (arm64) build support and binaries
 - python 3.10.1

build 19 - dec/16/2021
 - youtube_dl-2021.12.17
 - pycryptodome-3.12.0
 - astroid-2.9.0
 - pylint-2.12.2
 - websockets-8.1
 - downgrade to sanic-20.12.4 (21.3.4 not available on pip for Docker image)

build 18 - nov/12/2021
 - pip-21.3.1
 - pylint-2.11.1
 - astroid-2.8.5
 - pycryptodome-3.11.0
 - pyinstaller-4.7
 - websockets-10.0

build 17 - aug/27/2021
 - pip-21.2.4
 - pylint-2.10.2
 - astroid-2.7.2
 - youtube_dl-2021.6.6
 - pyinstaller-4.5.1

NOTES:
 - can't update to sanic-21.6.2, breaks with ModuleNotFoundError: No module named 'websockets.legacy.protocol'

build 16 - jun/07/2021
 - built with python 3.6.9
 - pip-21.1.2
 - pylint-2.8.3
 - astroid-2.5.6
 - youtube_dl-2021.6.6
 - sanic-21.3.4
 - pyinstaller-4.3

build 15 - apr/06/2021
 - NEW: --server mode, run teluride as an RPC web server
 - python: pylint-2.7.4
 - python: youtube_dl-2021.4.7
 - python: astroid-2.5.2
 - python: sanic-21.3.2
 - python: sanic_routing-0.5.2
 - python: httptools-0.1.1
 - python: ujson-4.0.2
 - python: uvloop-0.15.2
 - python: websockets-8.1
 - python: aiofiles-0.6.0
 - python: multidict-5.1.0

build 12 - mar/14/2021
 - python: youtube-dl-2021.3.14

build 11 - mar/03/2021
 - python: youtube-dl 2021.3.3
 - python: pylint 2.7.2

build 10 - feb/10/2021
 - python: pip-21.0.1
 - python: youtube-dl 2021.2.10
 - python: pycryptodome 3.10.1

build 9 - jan/14/2021
 - python: pyinstaller 4.2
 - python: youtube-dl 2021.1.8
 - python: pycryptodome 3.9.9

build 8 - dec/28/2020
 - python: pip-20.3.3
 - python: youtube-dl 2020.12.29
 - macos binary comes signed and notarized with hardened runtime

build 7 - dec/8/2020
 - python: pip-20.3.1
 - python: youtube-dl 2020.12.7